--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes for Game-Lacuna-Task
 
+2.04 Fri, Apr 07, 2012
+    * Maintenance release
+
 2.03 Fri, Apr 06, 2012
     * New resources push action
     * New upgrade fleet action
